# ai-testing-framework

./: README.md  pyproject.toml  setup.py
benchmarks/: chatbot_benchmark.json  classification_benchmark.json  codegen_benchmark.json  rag_benchmark.json  summarization_benchmark.json  translation_benchmark.json
data/: metrics_catalog.json  quality_gates.yml
docs/: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  METRICS_REFERENCE.md
examples/: basic_usage.py  ci_cd_integration.py  custom_metrics.py  evaluating_ollama.py  evaluating_openai.py  evaluating_rag_pipeline.py
src/ai_testing/: __init__.py  engine.py  gates.py  runner.py
src/ai_testing/config/: settings.py
src/ai_testing/fixtures/: conftest.py
src/ai_testing/metrics/: __init__.py
src/ai_testing/reporters/: __init__.py
src/ai_testing/test_cases/: __init__.py
test_suites/: __init__.py  agent_test_suite.py  chatbot_test_suite.py  classification_test_suite.py  codegen_test_suite.py  rag_test_suite.py  sentiment_test_suite.py  summarization_test_suite.py  translation_test_suite.py
